--- a/composer.json
+++ b/composer.json
@@ -40,8 +40,8 @@
         "symfony/monolog-bundle": "^3.1.0",
         "symfony/polyfill-apcu": "^1.0",
         "symfony/profiler-pack": "^1.0",
-        "symfony/security-bundle": "4.2.*",
-        "symfony/security-core": "4.2.*",
+        "symfony/security-bundle": "4.3.*",
+        "symfony/security-core": "4.3.*",
         "symfony/security-csrf": "4.2.*",
         "symfony/serializer-pack": "^1.0",
         "symfony/swiftmailer-bundle": "^3.2.5",
@@ -72,6 +72,7 @@
         "paragonie/random_compat": "2.*",
         "symfony/polyfill-ctype": "*",
         "symfony/polyfill-iconv": "*",
+        "symfony/polyfill-php73": "*",
         "symfony/polyfill-php71": "*",
         "symfony/polyfill-php70": "*",
         "symfony/polyfill-php56": "*"
